# configops-hub

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/prisma/migrations/20260622102041_init/: migration.sql
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/changelog/: page.tsx
apps/web/src/app/(dashboard)/configs/: page.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/app/(dashboard)/settings/: page.tsx
apps/web/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
apps/web/src/components/configs/: ConfigEditor.tsx  ConfigList.tsx
apps/web/src/components/layout/: Sidebar.tsx  Topbar.tsx
apps/web/src/components/settings/: ApiKeysTab.tsx  BillingTab.tsx  WebhooksTab.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
apps/web/src/lib/: audit.ts  crypto.ts  npm-auth.ts  plan-limits.ts  utils.ts  webhook.ts  workspace.ts
apps/web/src/lib/auth/: config.ts  edge-config.ts
apps/web/src/lib/db/: index.ts
sdks/node/: package.json
sdks/node/src/: index.ts
sdks/python/: pyproject.toml
sdks/python/configops/: __init__.py
(+17 files in other folders)
